read only copy of vff

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -60,9 +60,9 @@ eggs =
 
 [sources]
 # read write vff:
-vff = git git@github.com:Yaco-Sistemas/django-vff.git
+# vff = git git@github.com:Yaco-Sistemas/django-vff.git
 # read only vff:
-# vff = git git://github.com/Yaco-Sistemas/django-vff.git
+vff = git git://github.com/Emergya/django-vff.git
 
 [versions]
 # manually added
